[project]
name = "safety-confirmation-backend"
version = "0.1.0"
description = "Safety Confirmation System backend (AWS Lambda functions and shared code)"
# AWS Lambda Runtime python3.12 と整合させるため Python 3.12.x にピン
requires-python = ">=3.12,<3.13"

# Phase 0.2 時点では single project として構成。
# Phase 5 以降で各 Lambda を `lambdas/<name>/` に追加していく。
# Lambda 数が増えた段階で uv workspace への移行を再ADRで判断する。

[tool.uv]
package = false

# PEP 735: Dependency Groups (uv 0.9 以降の標準)
[dependency-groups]
dev = [
    "ruff>=0.6,<1.0",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "boto3>=1.34",
    "boto3-stubs[essential,cognito-idp,dynamodb,s3,stepfunctions,connect,transcribe,events,kms,logs]>=1.34",
    "cfn-lint>=1.0",
]

# --- Ruff: Lint ---

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    ".uv-cache",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "PL",  # Pylint
    "RET", # flake8-return
    "PT",  # flake8-pytest-style
    "ANN", # flake8-annotations
]
ignore = [
    "S101",    # assertの使用(テストでは許可)
    "PLR0913", # 引数多すぎ(Lambda Handlerでは普通)
    "PLR2004", # マジックナンバー(後段でcase-by-case)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "ANN"]
"**/tests/**" = ["S", "PLR2004", "ANN"]

# --- Black: Format ---

[tool.black]
line-length = 100
target-version = ["py312"]

# --- mypy: Static Type Check ---

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    ".venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- pytest ---

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
